--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,18 @@
 {
   "name": "frontend",
+  "description": "Frontend of e-commerce application be-commerce",
+  "contributors": [
+    {
+      "name": "Kiran Mahajan",
+      "email": "thekiranmahajan@outlook.com"
+    },
+    {
+      "name": "Sakshi Jaiswal",
+      "email": "thesakshijaiswal@outlook.com"
+    }
+  ],
+  "author": "Kiran Mahajan & Sakshi Jaiswal",
+  "license": "MIT",
   "private": true,
   "version": "0.0.0",
   "type": "module",
