chore: make basic setup for express server ready

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,16 +12,17 @@
       "email": "thesakshijaiswal@outlook.com"
     }
   ],
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node --watch server.js",
+    "start": "node server.js"
   },
   "keywords": [
     "express",
     "mongodb",
     "mongoose",
-    "dotenv",
-    "etc"
+    "dotenv"
   ],
   "author": "Kiran Mahajan & Sakshi Jaiswal",
   "license": "MIT",
