chore: remove dotenv and use node.js inbuilt --env-file=.env flag before file name

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch server.js",
-    "start": "node server.js"
+    "dev": "node --watch --env-file=.env server.js",
+    "start": "node --env-file=.env server.js"
   },
   "keywords": [
     "express",
@@ -27,7 +27,6 @@
   "author": "Kiran Mahajan & Sakshi Jaiswal",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.0"
   }
