--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
   "author": "Kiran Mahajan & Sakshi Jaiswal",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.9.0"
   }
