--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "motion": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
