feat: refactor backend entry point to src/index.js and establish database connection

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,11 @@
       "email": "thesakshijaiswal@outlook.com"
     }
   ],
-  "main": "server.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch --env-file=.env server.js",
-    "start": "node --env-file=.env server.js"
+    "dev": "node --watch --env-file=.env src/index.js",
+    "start": "node --env-file=.env src/index.js"
   },
   "keywords": [
     "express",
