--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,10 +28,10 @@
     "motion": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.27.0",
-    "react-toastify": "^11.0.2"
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
