--- a/backend/package.json
+++ b/backend/package.json
@@ -29,12 +29,16 @@
   "author": "Kiran Mahajan & Sakshi Jaiswal",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.8.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.0",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
