--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch --env-file=.env src/index.js",
-    "start": "node --env-file=.env src/index.js",
+    "start": "node src/index.js",
     "data:import": "node --env-file=.env src/lib/seeder.js",
     "data:destroy": "node --env-file=.env src/lib/seeder.js -d"
   },
