--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
   ],
   "main": "index.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "install": "npm install --prefix frontend && npm install --prefix backend",
+    "build": "npm run build --prefix frontend",
     "start": "npm run start --prefix backend"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/thesakshijaiswal/be-commerce.git"
   },
-  "keywords": ["E-Commerce","MERN","FullstackApp"],
+  "keywords": [
+    "E-Commerce",
+    "MERN",
+    "FullstackApp"
+  ],
   "author": "Kiran Mahajan & Sakshi Jaiswal",
   "license": "MIT",
   "bugs": {
