--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^8.9.0",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^18.1.0"
   }
 }
