--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.0",
+    "multer": "^2.0.0",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
